fix: post card info minimal gap

--- a/src/components/PostInfo/PostInfo.scss
+++ b/src/components/PostInfo/PostInfo.scss
@@ -129,5 +129,6 @@ $block: '.#{$namespace}post-info';
         display: flex;
         flex-grow: 1;
         flex-wrap: wrap;
+        padding-right: $indentXXS;
     }
 }
